--- a/notebooks/references.bib
+++ b/notebooks/references.bib
@@ -57,3 +57,12 @@
 	address = {New York, NY},
 	langid = {eng}
 }
+
+@misc{thearim2010,
+	title = {The ARIMAX model muddle},
+	year = {2010},
+	month = {10},
+	date = {2010-10-04},
+	url = {https://robjhyndman.com/hyndsight/arimax/},
+	langid = {en}
+}
